<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_image_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/preview_image" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/galleryButton"
            app:layout_constraintTop_toBottomOf="@id/previewImageView"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            app:layout_constraintStart_toEndOf="@id/cameraButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/previewImageView"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_description"
            android:inputType="textMultiLine"
            android:minHeight="250dp"
            android:background="@drawable/text_border"
            android:gravity="top|start"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/galleryButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionEditText"
            android:layout_marginTop="16dp" />

        <ProgressBar
            android:id="@+id/progressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/locationCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/include_my_location"
            app:layout_constraintTop_toBottomOf="@id/uploadButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
